--- a/report/main.tex
+++ b/report/main.tex
@@ -7,7 +7,7 @@
 %\usepackage[ngerman]{babel}
 \usepackage{graphics,graphicx}
 \usepackage{amsmath, amssymb, amstext, amsfonts}
-
+\usepackage[]{algorithm2e}
 \usepackage{enumitem} 
 %\usepackage{dsfont}
 
