--- a/report/main.tex
+++ b/report/main.tex
@@ -71,5 +71,8 @@ Use Sphinx 3 coded in C.
 \bibitem{understand_sphinx} Understanding the CMU sphinx Speech Recognition System (Chung Feng Liao) \\ http://soa.csie.org/static-resources/homework/pr/pr\_final\_report.pdf
 
 \bibitem{eff_algo} Efficient algorithm for speech recognition (Mosur K. Ravishankar) \\ http://www.cs.cmu.edu/~rkm/th/th.pdf
+
+\bibitem{dyn_prog} Dynamic Programming \\ http://berghel.net/publications/asm/asm.php
+
 \end{thebibliography}
 \end{document}
