--- a/report/main.tex
+++ b/report/main.tex
@@ -38,14 +38,14 @@
 \setlength{\parskip}{5pt plus 2pt minus 1pt} %dafuer aber vertikaler Abstand
 
 \begin{document}
-\title{Project work \\ Speech and speaker recognition}
+\title{Project work\\DT2118\\Speech and speaker recognition}
 \author{Cl\'{e}mence Bisot \and David Jangdal \and Taylor Mordan}
 \maketitle
 
 \begin{abstract}
-Thanks to advances in speech recognition technology, integrating speech recognition supports into a lot of our everyday life devices has been made possible. One of the numerous possible applications is to use speech engines inside games. To make speaking part of the game is a promising way of involving the player into a game. 
+Thanks to advances in speech recognition technology, integrating speech recognition supports into a lot of our everyday life devices has been made possible. One of the numerous possible applications is to use speech engines inside games. Making speech part of the game is a promising way of involving the player into a game. 
 
-The goal in this project was to build a speech recognizer to play the game "Say the color not the word" (\cite{game_site}). The purpose of this game is to speak out the color in which a word is written. To confuse the player, the written word is in fact an other color. 
+The goal in this project was to build a speech recognizer to play the game "Say the color not the word" \cite{game_site}. The purpose of this game is to speak out the color in which a word is written. To confuse the player, the written word is in fact an other color. 
 
 
 \end{abstract}
