Updates to the game

--- a/report/game_implementation.tex
+++ b/report/game_implementation.tex
@@ -1,4 +1,5 @@
 \section*{Game implementation}
-We decided to play the game with seven different colors and to display the words one by one. The recognizer to be build is then quite easy. It has a short dictionary of only seven words and a grammar of only one word per sentence. Moreover, the probability to appear for each word is the same. Thus, there is no need of building any language model in our case.
+We decided to play the game with eight different colors \textbf{Black, Blue, Pink, Green, White, Orange, Yellow, Red} and to display the words one by one. The recognizer to be build is then quite easy. It has a short dictionary of only the eight colors and a grammar of only one word per sentence. Moreover, the probability to appear for each word is the same. Thus, there is no need of building any language model in our case.
 
+\newpage
 %%acoustic model -> one fitted for microphone reccrding 8khz. 
